[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/theme_regular.tres" type="Theme" id=1]
[ext_resource path="res://labz/img2ballz.gd" type="Script" id=2]
[ext_resource path="res://hole_img.gd" type="Script" id=3]

[node name="img2ballz" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="bg" type="TextureRect" parent="."]
modulate = Color( 0.00784314, 0.196078, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
expand = true
stretch_mode = 2

[node name="hsc" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="vbc" type="VBoxContainer" parent="hsc"]
margin_right = 347.0
margin_bottom = 600.0

[node name="HSeparator3" type="HSeparator" parent="hsc/vbc"]
margin_right = 347.0
margin_bottom = 4.0

[node name="Label2" type="Label" parent="hsc/vbc"]
margin_top = 8.0
margin_right = 347.0
margin_bottom = 30.0
text = "convert square png using petz palette to \"x,y,z,color\""
align = 1

[node name="HSeparator4" type="HSeparator" parent="hsc/vbc"]
margin_top = 34.0
margin_right = 347.0
margin_bottom = 38.0

[node name="vbc" type="VBoxContainer" parent="hsc/vbc"]
margin_top = 42.0
margin_right = 347.0
margin_bottom = 178.0

[node name="hbc" type="HBoxContainer" parent="hsc/vbc/vbc"]
margin_right = 347.0
margin_bottom = 74.0

[node name="inputPNG" type="TextureRect" parent="hsc/vbc/vbc/hbc"]
editor/display_folded = true
margin_right = 213.0
margin_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 128, 64 )
size_flags_horizontal = 15
size_flags_vertical = 15
expand = true
stretch_mode = 6
script = ExtResource( 3 )

[node name="Label" type="Label" parent="hsc/vbc/vbc/hbc/inputPNG"]
modulate = Color( 1, 1, 1, 0.239216 )
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -53.0
margin_top = -15.5
margin_right = 53.0
margin_bottom = 15.5
text = "(drag n drop 
.png from folder)"
align = 1

[node name="vbc" type="GridContainer" parent="hsc/vbc/vbc/hbc"]
margin_left = 217.0
margin_right = 347.0
margin_bottom = 74.0
columns = 2

[node name="labelroll" type="Label" parent="hsc/vbc/vbc/hbc/vbc"]
margin_right = 50.0
margin_bottom = 22.0
text = "roll°"
align = 2

[node name="spinroll" type="SpinBox" parent="hsc/vbc/vbc/hbc/vbc"]
margin_left = 54.0
margin_right = 130.0
margin_bottom = 22.0
min_value = -360.0
max_value = 360.0

[node name="labelpitch" type="Label" parent="hsc/vbc/vbc/hbc/vbc"]
margin_top = 26.0
margin_right = 50.0
margin_bottom = 48.0
text = "pitch° "
align = 2

[node name="spinpitch" type="SpinBox" parent="hsc/vbc/vbc/hbc/vbc"]
margin_left = 54.0
margin_top = 26.0
margin_right = 130.0
margin_bottom = 48.0
min_value = -360.0
max_value = 360.0

[node name="labelyaw" type="Label" parent="hsc/vbc/vbc/hbc/vbc"]
margin_top = 52.0
margin_right = 50.0
margin_bottom = 74.0
text = "yaw° "
align = 2

[node name="spinyaw" type="SpinBox" parent="hsc/vbc/vbc/hbc/vbc"]
margin_left = 54.0
margin_top = 52.0
margin_right = 130.0
margin_bottom = 74.0
min_value = -360.0
max_value = 360.0

[node name="hbc2" type="HBoxContainer" parent="hsc/vbc/vbc"]
margin_top = 78.0
margin_right = 347.0
margin_bottom = 102.0
alignment = 1

[node name="labelspherise" type="Label" parent="hsc/vbc/vbc/hbc2"]
margin_left = 58.0
margin_top = 1.0
margin_right = 121.0
margin_bottom = 23.0
size_flags_horizontal = 0
text = "spherise"

[node name="checkspherise" type="CheckBox" parent="hsc/vbc/vbc/hbc2"]
margin_left = 125.0
margin_right = 149.0
margin_bottom = 24.0
size_flags_horizontal = 0
size_flags_vertical = 4
pressed = true

[node name="labelspace" type="Label" parent="hsc/vbc/vbc/hbc2"]
margin_left = 153.0
margin_top = 1.0
margin_right = 209.0
margin_bottom = 23.0
size_flags_horizontal = 0
text = "spacing"

[node name="spinspace" type="SpinBox" parent="hsc/vbc/vbc/hbc2"]
margin_left = 213.0
margin_top = 1.0
margin_right = 289.0
margin_bottom = 23.0
size_flags_horizontal = 0
size_flags_vertical = 4
min_value = 1.0
value = 1.0

[node name="PanelContainer" type="PanelContainer" parent="hsc/vbc/vbc"]
margin_top = 106.0
margin_right = 347.0
margin_bottom = 136.0

[node name="convertButton" type="Button" parent="hsc/vbc/vbc/PanelContainer"]
margin_left = 6.0
margin_top = 4.0
margin_right = 341.0
margin_bottom = 26.0
size_flags_horizontal = 3
text = "convert to x,y,z,color"

[node name="HSeparator" type="HSeparator" parent="hsc/vbc"]
margin_top = 182.0
margin_right = 347.0
margin_bottom = 186.0

[node name="Label" type="Label" parent="hsc/vbc"]
margin_top = 190.0
margin_right = 347.0
margin_bottom = 212.0
text = "wrap lines"
align = 1

[node name="HSeparator2" type="HSeparator" parent="hsc/vbc"]
margin_top = 216.0
margin_right = 347.0
margin_bottom = 220.0

[node name="modifiers" type="TabContainer" parent="hsc/vbc"]
margin_top = 224.0
margin_right = 347.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="paintballz" type="VBoxContainer" parent="hsc/vbc/modifiers"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 29.0
margin_right = -5.0
margin_bottom = -5.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="hsc/vbc/modifiers/paintballz"]
margin_top = 143.0
margin_right = 386.0
margin_bottom = 165.0
alignment = 1

[node name="labelparent" type="Label" parent="hsc/vbc/modifiers/paintballz/HBoxContainer"]
margin_right = 76.0
margin_bottom = 22.0
size_flags_horizontal = 0
text = "parent ball"

[node name="spinparent" type="SpinBox" parent="hsc/vbc/modifiers/paintballz/HBoxContainer"]
margin_left = 80.0
margin_right = 156.0
margin_bottom = 22.0
size_flags_horizontal = 0
size_flags_vertical = 0
max_value = 512.0
value = 24.0
rounded = true

[node name="labelsize" type="Label" parent="hsc/vbc/modifiers/paintballz/HBoxContainer"]
margin_left = 160.0
margin_right = 306.0
margin_bottom = 22.0
size_flags_horizontal = 0
text = "ball size (% of parent)"

[node name="spinsize" type="SpinBox" parent="hsc/vbc/modifiers/paintballz/HBoxContainer"]
margin_left = 310.0
margin_right = 386.0
margin_bottom = 22.0
size_flags_horizontal = 0
size_flags_vertical = 0
min_value = 3.0
value = 3.0

[node name="PanelContainer" type="PanelContainer" parent="hsc/vbc/modifiers/paintballz"]
margin_top = 169.0
margin_right = 386.0
margin_bottom = 199.0

[node name="paintballzButton" type="Button" parent="hsc/vbc/modifiers/paintballz/PanelContainer"]
margin_left = 6.0
margin_top = 4.0
margin_right = 380.0
margin_bottom = 26.0
size_flags_horizontal = 3
text = "wrap em up"

[node name="custom" type="VBoxContainer" parent="hsc/vbc/modifiers"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 29.0
margin_right = -5.0
margin_bottom = -5.0

[node name="Label" type="Label" parent="hsc/vbc/modifiers/custom"]
margin_right = 337.0
margin_bottom = 22.0
text = "prepend"

[node name="prepend" type="PanelContainer" parent="hsc/vbc/modifiers/custom"]
margin_top = 26.0
margin_right = 337.0
margin_bottom = 156.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextEdit" type="TextEdit" parent="hsc/vbc/modifiers/custom/prepend"]
margin_left = 6.0
margin_top = 4.0
margin_right = 331.0
margin_bottom = 126.0
text = "2, "

[node name="Label2" type="Label" parent="hsc/vbc/modifiers/custom"]
margin_top = 160.0
margin_right = 337.0
margin_bottom = 182.0
text = "append"

[node name="append" type="PanelContainer" parent="hsc/vbc/modifiers/custom"]
margin_top = 186.0
margin_right = 337.0
margin_bottom = 316.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextEdit" type="TextEdit" parent="hsc/vbc/modifiers/custom/append"]
margin_left = 6.0
margin_top = 4.0
margin_right = 331.0
margin_bottom = 126.0
text = ", 0, 0, -1, -1, -1, 19, 0, 0, -1"

[node name="wrapButton" type="Button" parent="hsc/vbc/modifiers/custom"]
margin_top = 320.0
margin_right = 337.0
margin_bottom = 342.0
size_flags_horizontal = 3
text = "wrap"

[node name="text" type="VBoxContainer" parent="hsc"]
editor/display_folded = true
margin_left = 355.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SpinBox" type="SpinBox" parent="hsc/text"]
visible = false
margin_right = 575.0
margin_bottom = 22.0

[node name="TextEdit" type="TextEdit" parent="hsc/text"]
margin_right = 669.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
show_line_numbers = true
[connection signal="button_down" from="hsc/vbc/vbc/PanelContainer/convertButton" to="." method="_on_convertButton_down"]
[connection signal="pressed" from="hsc/vbc/modifiers/paintballz/PanelContainer/paintballzButton" to="." method="_on_paintballzButton_pressed"]
[connection signal="pressed" from="hsc/vbc/modifiers/custom/wrapButton" to="." method="_on_wrapButton_pressed"]
